[package]
name = "salve"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "TODO_DESCRIPTION"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/salve"
homepage = "https://github.com/Tamschi/salve/tree/v0.0.1"
documentation = "https://docs.rs/salve/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/salve" }
is-it-maintained-open-issues = { repository = "Tamschi/salve" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
proc-macro2 = { version = "1.0.40", default-features = false }
syn = { version = "1.0.98", default-features = false, features = ["parsing"] }
this-is-fine = "0.0.1"

[dev-dependencies]
cargo-husky = "1.5.0"
catch = { git = "https://github.com/Tamschi/catch.git", branch = "develop" }
git_info = "0.1.2"
quote = { version = "1.0.20", default-features = false }
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
